@@ -7,6 +7,7 @@ Added
     Show instance limits on instance view (#288)
     Get & set comments in the user.comment key for an instance (#283)
     Show project consumption on project overview
+    Filter by name & instance type in sidebar on hosts with more than 5 instances
 
 Changed
     Support backups & backup schedules in different projects
